# MedicalImageProessing

./: README.md  realibility_2016_-1_11_bowring.txt
2Dto3D/: 2Dto3D.cxx  CMakeLists.txt  ReadMe.txt
DICOM_Header_Information/: CMakeLists.txt  DICOMHeader.cxx
EdgePreservingFilter/: CMakeLists.txt  EdgePreservingFilter.cxx  README.txt
EdgeRepairFilter/: CMakeLists.txt  EdgeRepairFilter.cxx  algorithm.txt
GDCMBoundingBoxDrawing/: CMakeLists.txt  GDCMBoundingBoxDrawing.cxx
GDCMBoundingEllipseDrawing/: CMakeLists.txt  GDCMBoundingEllipseDrawing.cxx
GDCMDrawProblemLine/: CMakeLists.txt  GDCMDrawProblemLine.cxx  GDCMDrawProblemLineRep.cxx  GDCMDrawProblemLineRep_EricBowringModified.cxx  GDCMDrawProblemLineRep_EricModified.cxx  GDCMDrawProblemLine_Combined.cxx  GDCMDrawProblemLine_Eric.cxx  algorithm.txt  repairContourEric.cxx  tempCode.cxx
GDCMExtractMaskImage/: CMakeLists.txt  GDCMExtractMaskImage.cxx
GDCMExtractParenchyma/: CMakeLists.txt  GDCMExtractParenchyma.cxx
GDCMFPReduction/: CMakeLists.txt  E,F,G部分框架.cxx  GDCMFPReduction.cxx  minicsv.h
GDCMImageFloodFillFilter/: CMakeLists.txt  GDCMImageFloodFillFilter.cxx
GDCMImageKmeansFilter/: CMakeLists.txt  GDCMImageKmeansFilter.cxx
GDCMImageMedianFilter/: CMakeLists.txt  GDCMImageMedianFilter.cxx  ReadMe.txt
GDCMImageMedianFilter3DTo3D/: CMakeLists.txt  GDCMImageMedianFilter3DTo3D.cxx
GDCMImageOriginalKmeansFilter/: CMakeLists.txt  GDCMImageOriginalKmeansFilter.cxx  ReadMe.txt
GDCMImageROIFilter/: CMakeLists.txt  GDCMImageROIFilter.cxx
GDCMImageWeightedKmeansFilter/: CMakeLists.txt  GDCMImageWeightedKmeansFilter.cxx  KdTreeBasedKmeansEstimator.h  KdTreeBasedKmeansEstimator.hxx  ReadMe(这个一定要读).txt
GDCMLabelingImage3D/: CMakeLists.txt  GDCMLabelingImage3D.cxx
GDCMMarkByBlobAndVessel/: CMakeLists.txt  CalcVessel.m  GDCMMarkByBlobAndVessel.cxx  JudgeNodule.m  SortLambda.m
GDCMMaskImageFilter/: CMakeLists.txt  GDCMMaskImageFilter.cpp
GDCMMorphologicalClosing/: CMakeLists.txt  GDCMMorphologicalClosing.cpp
GDCMMorphologyDilate/: CMakeLists.txt  GDCMMorphologyDilate.cxx
GDCMMorphologyErode/: CMakeLists.txt  GDCMMorphologyErode.cxx
GDCMNeighborhoodIterator/: CMakeLists.txt  GDCMNeighborhoodIterator.cxx
GDCMSurfaceExtraction/: CMakeLists.txt  GDCMSurfaceExtraction.cxx
GenerateTestDcmFiles/: CMakeLists.txt  GenerateTestDcmFiles.cxx  GenerateTestDcmFiles_FromOpencvFailed.cxx  Refs.txt  test.dcm
ImageReadSeriesWrite/: CMakeLists.txt
LDA/: CMakeLists.txt  LDA.c  LDA.cpp  LDASample.c  README.txt
LeftRightLungSeperation/: CMakeLists.txt  LeftRightLungSeperation.cxx  repairContourEric.cxx
MATLAB/: CalcBlob.m  JudgeNodule.m
MATLAB_Hessian&EigenValue/: Commands.txt  eig3volume.mexw64
Rule-basedFPReduction/: algorithm.txt
Test_GDCMWeightedKmeansFilter/: ReadMe.txt  Readme.me  TestKmeans2.cpp  TestKmeans3.cpp  TestKmeans4.cpp  TestingKmeans.cpp
Threshold/: Readme.txt  ThresholdImageFilter.cxx
ThresholdImageFilter/: CMakeLists.txt  Readme.txt  ThresholdImageFilter.cxx
